@@ -4,6 +4,8 @@ Changes in version 1.050
 - Modified all the crypto hash functions to fit a control block
   framework (like the HMAC system does).
 
+- Added a crypto hash "lookup by name" function.
+
 - Tweaked the hmac_finish prototype to properly indicate that the
   midstate is const and unmodified by the function.
 
